# disease_ditection

./: .dockerignore  Dockerfile.java  daemon.json  disease_detection.sql  docker-compose.yml  pom.xml  start-docker.bat  start-docker.sh
python_service/: .gitignore  API服务使用说明.md  Dockerfile  Qwen3.py  README.md  api_service.py  config.py  debug_model.py  pyproject.toml  requirements_api.txt  start_api.sh  train_model_from_folder.py
python_service/notebooks/: 01_model_training.ipynb
python_service/streamlit_app/: app.py
src/main/java/com/disease/controller/: AIController.java  AdminController.java  AuthController.java  CommunityController.java  (+9 more)
src/main/resources/: application.properties
src/main/resources/mybatis/: AIRecordMapper.xml  AdminMapper.xml  AnswerMapper.xml  CommentMapper.xml  CropMapper.xml  DiseaseMapper.xml  DiseasePesticideMapper.xml  ExpertMapper.xml  FarmerMapper.xml  FrameworkMapper.xml  MessageMapper.xml  PesticideMapper.xml  PostMapper.xml  PrivateMessageMapper.xml  QuestionMapper.xml  mybatis-config.xml
src/main/resources/spring/: applicationContext.xml  spring-mvc.xml
src/main/webapp/WEB-INF/: web.xml
src/main/webapp/WEB-INF/views/: ai_recognition.jsp  community.jsp  expert_home.jsp  expert_knowledge_base.jsp  expert_knowledge_crop_form.jsp  expert_knowledge_disease_form.jsp  expert_knowledge_pesticide_form.jsp  expert_knowledge_treatment_form.jsp  expert_profile_edit.jsp  expert_qa.jsp  expert_question_detail.jsp  farmer_profile_edit.jsp  index.jsp  login.jsp  private_message_chat.jsp  private_message_list.jsp  register.jsp
(+60 files in other folders)
