[project]
name = "ai-crop-disease-detector"
version = "0.1.0"
description = "AI-powered crop disease detection with CNN/ViT models"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
